--- a/dev/option.html
+++ b/dev/option.html
@@ -1,18 +1,12 @@
 <!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <title>Option | Tab Limit N</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body id="ctrl" class="option-">
-
-<h1>Option</h1>
-
-<div v-component="option-number" v-with="label: locales.tab, model: setting.tabNum"></div>
-<div v-component="option-check" v-with="label: locales.notify, model: setting.notify"></div>
-<div v-component="option-textarea" v-with="label: locales.priority, model: setting.priority"></div>
-<div v-component="option-submit" v-with="label: locales.save"></div>
-
-<script src="js/lib/vue.min.js"></script>
-<script src="js/option.js"></script>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Option | Tab Limiter</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  </head>
+  <body id="ctrl" class="option-">
+    <div id="option"></div>
+    <script src="scripts/option.js"></script>
+  </body>
+</html>
